--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">BMI Calculator</string>
     <string name="weight">Weight (kg)</string>
-    <string name="height">Height (cm)</string>
+    <string name="height">Height (meter)</string>
     <string name="picture">Profile Picture</string>
     <string name="bmi">BMI :</string>
     <string name="under">Underweight</string>
